--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "jest": "^25.1.0"
+  },
+  "dependencies": {
+    "eslint-plugin-jest": "^23.6.0"
   }
 }
